Bug 1199794 - Add NULL checks to avoid crashing during media playback if the audio device removed. r=padenot, a=ritu